--- a/config.yaml
+++ b/config.yaml
@@ -19,9 +19,6 @@ chr_list: "Chr1_3A_Tb427v10 Chr1_3B_Tb427v10 Chr1_5A_Tb427v10 Chr1_5B_Tb427v10
     BES15_Tb427v10 BES17_Tb427v10 BES1_Tb427v10 BES2_Tb427v10 BES3_Tb427v10
     BES4_Tb427v10 BES5_Tb427v10 BES7_Tb427v10"
 
-# Hi-C raw reads:
-raw_data: "/work/project/ladsie_002/analyses/data/HiC_data"
-
 # HiC digestion enzyme:
 enzyme: mboi
 enzyme_cutsite: "GATCGATC"
@@ -41,8 +38,8 @@ probability: [0.6]
 # Output directory (will be created automatically):
 output: "/your/output/directory"
 
-# Possibility to run multiple datasets at once:
-sets:
+# Location of the raw Hi-C reads in fastq format (multiple datasets can be run at once):
+reads:
 #  H3V: "/work/project/ladsie_002/analyses/data/HiC_data/H3V"
 #  H3V_H4V_dKO: "/work/project/ladsie_002/analyses/data/HiC_data/H3V_H4V_dKO"
 #  H4V: "/work/project/ladsie_002/analyses/data/HiC_data/H4V"
